noinst_LTLIBRARIES = libmtllib.la
libmtllib_la_SOURCES = mtl.c mtllib.c mtllib_util.c mtl_abstract.c mtl_node_set.c mtl_spx.c spx_funcs.c mtl_util.c mtl_buffer.c
libmtllib_la_LDFLAGS = -static

lib_LTLIBRARIES = libmtlslib.la
libmtlslib_la_SOURCES = mtl.c mtllib.c mtllib_util.c mtl_abstract.c mtl_node_set.c mtl_spx.c spx_funcs.c mtl_util.c mtl_buffer.c
pkginclude_HEADERS=mtl.h mtl_error.h mtl_node_set.h mtl_spx.h mtllib.h mtllib_util.h